--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,3 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="app_name">Нуар Чит</string>
+    <string name="new_game_label">Новая Игра</string>
+    <string name="players_num_label">Количество Игроков</string>
+    <string name="tree_num">3</string>
+    <string name="four_num">4</string>
+    <string name="five_num">5</string>
+    <string name="six_num">6</string>
+    <string name="eight_num">8</string>
+    <string name="nine_num">9</string>
+    <string name="player_turn_label">Ход игрока %1$s</string>
+    <string name="enter_name_label">Имя</string>
+    <string name="check_label">Допросить</string>
+    <string name="kill_label">Убить</string>
+    <string name="choose_action_label">Выберите действие</string>
+    <string name="nobody_label">Никто</string>
+    <string name="done_label">Готово</string>
+    <string name="caught_label">Кто попался на допросе</string>
+    <string name="died_label">Кто умер</string>
+    <string name="game_field_label">Игровое Поле</string>
+    <string name="players_tab_label">Игроки</string>
+    <string name="players_сreating_label">Создание игроков</string>
+    <string name="enter_player_name_label">Введите имя %1$d -го игрока</string>
+    <string name="names_file_path">names_ru.json</string>
 </resources>
