refactoring, clean up

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -24,4 +24,5 @@
     <string name="enter_player_name_label">Введите имя %1$d -го игрока</string>
     <string name="names_file_path">names_ru.json</string>
     <string name="language_text">Язык</string>
+    <string name="ok_label">OK</string>
 </resources>
