--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="enter_player_name_label">Enter name of player №%1$d</string>
     <string name="names_file_path">names_en.json</string>
     <string name="language_text">Language</string>
+    <string name="ok_label">OK</string>
 </resources>
